--- a/app.json
+++ b/app.json
@@ -1,15 +1,32 @@
 {
   "expo": {
-    "name": "plan-manager",
-    "slug": "plan-manager",
+    "name": "Aran",
+    "slug": "Aran",
     "privacy": "public",
     "sdkVersion": "36.0.0",
+    "ios": {
+      "bundleIdentifier": "com.lifeiscoder.aran",
+      "supportsTablet": true
+    },
+    "android": {
+      "package": "com.lifeiscoder.aran",
+      "versionCode": 2,
+      "permissions": [
+        "CAMERA",
+        "RECORD_AUDIO",
+        "READ_PHONE_STATE",
+        "READ_CONTACTS",
+        "READ_INTERNAL_STORAGE",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
+    },
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "0.1.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -23,8 +40,7 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    }
+    "description": "This is an app that helpful for you achieving your plans.",
+    "githubUrl": "https://github.com/hsk-kr/plan-manager"
   }
 }
